Layout: Fix text align in menu

--- a/src/assets/scss/_menu.scss
+++ b/src/assets/scss/_menu.scss
@@ -22,7 +22,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-content: center;
+        align-items: center;
         .icon {
           font-size: 18pt;
         }
